--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
+    "sass-embedded": "^1.83.4",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
+    "vite-plugin-vuetify": "^2.0.4",
     "vitest": "^3.0.2",
     "vue-tsc": "^2.2.0"
   }
